--- a/index.html
+++ b/index.html
@@ -65,6 +65,25 @@
               </div>
             </div>
           </div>
+
+          <div class="container">
+            <div class="resume__block">
+              <div class="skills">
+                <h3 class="skills__header">Skills</h3>
+                <p class="skills__text">.NET, c#, ef core, asp net core, angular, ngrx</p>
+              </div>
+            </div>
+          </div>
+          <div class="container">
+            <div class="resume__block">
+              <div class="main-info fh">
+          
+                <div class="experiences"></div>
+          
+                <div class="additional-info fv"></div>
+              </div>
+            </div>
+          </div>
         </div>
       </main>
   </body>
